# qa-automation

./: conftest.py  docker-compose.yml  pyproject.toml  settings.py
docker/myapp/: myapp.config  myapp_db.sql
docker/vk_api_mock/: Dockerfile  dtos.py  pyproject.toml  vk_api_mock.py
mysql/: client.py  project_db.py
mysql/models/: base_model.py  test_user_model.py
