[tool.poetry]
name = "vk-api-mock"
version = "0.1.0"
description = ""
authors = ["Danil Vorobev <hsabuse@yandex.ru>"]
readme = "README.md"
packages = [{include = "vk_api_mock"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
faker = "^19.2.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
